hack to add price-service to title-service

--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,24 @@
 <head>
 <title>AUDIBLE | Product Page</title>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="style.css"/>
-<!-- <link href="http://localhost:1220/style.css" />
-<link href="http://localhost:3000/style.css" />
-<link href="http://localhost:4000/style.css" /> -->
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Muli:400,900" rel="stylesheet">
 </head>
 <body>
   <div id="title-service"></div>
-  <div id="price-service"></div>
   <div id="summary"></div>
   <div id="reviews"></div>
 
   <script src="http://localhost:2002/title-service.js"></script>
-  <script src="http://localhost:3000/priceBundle.js"></script>
   <script src="http://localhost:1220/summary.js"></script>
   <script src="http://localhost:4000/reviews.js"></script>
+  <script>
+    const script = document.createElement('script');
+    script.src = 'http://localhost:3000/pricebundle.js';
+    setTimeout(() => {
+      document.body.append(script);
+    }, 100);
+  </script>
 </body>
