--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,18 @@
 <link href="https://fonts.googleapis.com/css?family=Muli:400,900" rel="stylesheet">
 </head>
 <body>
+  <div class="main-header">
+    <div class="header-container">
+      <div class="header-nav-mobile"><img src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/mobile_nav.png"></div>
+      <div class="header-logo-desktop"><img src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/logo.svg"></div>
+      <div class="search-box-mobile"><img src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/search.png"></div>
+      <div class="header-logo-mobile"><img width="100%" height="100%" src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/logo_mobile.png"></div>
+      <div class="right-side">
+         <a href='#'>Sign In</a>
+        <div class="search-box"><img src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/search-bar.png"></div>
+      </div>
+    </div>
+  </div>
   <div id="title-service"></div>
   <div id="summary"></div>
   <div id="reviews"></div>
