--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,19 @@
       </div>
     </div>
   </div>
+
   <div id="title-service"></div>
   <div id="summary"></div>
+  <div id="aggReview"></div>
   <div id="reviews"></div>
 
-  <script src="http://localhost:2002/title-service.js"></script>
-  <script src="http://localhost:1220/summary.js"></script>
-  <script src="http://localhost:4000/reviews.js"></script>
+  <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/title-service.js"></script>
+  <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/summary.js"></script>
+  <script src="https://s3-us-west-1.amazonaws.com/fec.audible.productpage/Reviews/reviews.js"></script>
+  <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/aggReview.js"></script>
   <script>
     const script = document.createElement('script');
-    script.src = 'http://localhost:3000/pricebundle.js';
+    script.src = 'https://hr-rpt-audible.s3-us-west-1.amazonaws.com/priceBundle.js';
     setTimeout(() => {
       document.body.append(script);
     }, 100);
