--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,10 @@
   <div id="aggReview"></div>
   <div id="reviews"></div>
 
+
   <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/title-service.js"></script>
   <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/summary.js"></script>
-  <script src="https://s3-us-west-1.amazonaws.com/fec.audible.productpage/Reviews/reviews.js"></script>
+  <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/reviews.js"></script>
   <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/aggReview.js"></script>
   <script>
     const script = document.createElement('script');
