working on readme

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Muli:400,900" rel="stylesheet">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="main-header">
@@ -22,12 +23,16 @@
   </div>
 
   <div id="title-service"></div>
+  <div class="also-enjoyed-container">
+    <div id="also-enjoyed-service"></div>
+  </div>
   <div id="summary"></div>
   <div id="aggReview"></div>
   <div id="reviews"></div>
 
 
-  <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/title-service.js"></script>
+  <script src="https://hr-rpt-audible.s3.us-west-1.amazonaws.com/title-service.js"></script>
+  <script src="https://hr-rpt-audible.s3.us-west-1.amazonaws.com/alsoEnjoyedBundle.js"></script>
   <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/summary.js"></script>
   <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/reviews.js"></script>
   <script src="https://hr-rpt-audible.s3-us-west-1.amazonaws.com/aggReview.js"></script>
